<resources>
    <string name="app_name">Signora</string>
    <string name="login_buttonc">login button</string>
    <string name="gmail_button">gmail button</string>
    <string name="register_button">register button</string>
    <string name="camera">camera</string>
    <string name="back_button">back</string>
    <string name="enter_description">Description</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="namaanda">nama anda\n</string>

    <string name="profile_image_description">profile</string>
    <string name="start">daftar</string>
    <string name="daftarIsi">Mulailah petualangan Anda dalam memahami bahasa isyarat dengan mudah dan interaktif.</string>


    //Onboarding
    <string name="title_onboarding_1">Selamat datang di Signora</string>
    <string name="description_onboarding_1">Menghubungkan Dunia dengan Bahasa Isyarat. Jembatan komunikasi melalui bahasa isyarat</string>

    <string name="title_onboarding_2">Scan mudah di Signora</string>
    <string name="description_onboarding_2">Teknologi canggih untuk terjemahan cepat yang memahami gerakan bahasa isyarat dengan mudah dan mengubahnya menjadi teks dalam hitungan detik</string>

    <string name="title_onboarding_3">Kuis Menarik</string>
    <string name="description_onboarding_3">Uji pengetahuan Anda dengan kuis yang menantang dan edukatif.</string>

    <string name="title_onboarding_4">Pembelajaran Isyarat</string>
    <string name="description_onboarding_4">Pelajari isyarat baru setiap hari dan perluas kemampuan komunikasi Anda.</string>

    <string name="title_onboarding_5">Komunitas Inklusif</string>
    <string name="description_onboarding_5">Bergabunglah dengan komunitas yang mendukung dan berbagi pengetahuan tentang bahasa isyarat.</string>

    <string name="Daftar">Daftar</string>
    <string name="masuk">Login</string>
    <string name="show_password">show password</string>
    <string name="errorEmail">Harap memasukan email dengan benar</string>
    <string name="errorPass">Password minimal 8 karakter</string>
    <string name="minimum">Nama minimal 3 karakter</string>
    <string name="ganti">Ganti</string>
    <string name="title_activity_add_discussion">AddDiscussion</string>
    <string name="title_activity_camera_x">CameraX</string>

    <string name="instruction">Arahkan kamera untuk memulai terjemahkan</string>
    <string name="default_web_client_id">100849197659-hn8k6hhc3p5a4jq5gmca14mlhpcrtn54.apps.googleusercontent.com</string>

    <string-array name="gambarAlphabet">
        <item>@drawable/a</item>
        <item>@drawable/b</item>
        <item>@drawable/c</item>
        <item>@drawable/d</item>
        <item>@drawable/e</item>
        <item>@drawable/f</item>
        <item>@drawable/g</item>
        <item>@drawable/h</item>
        <item>@drawable/i</item>
        <item>@drawable/j</item>
        <item>@drawable/k</item>
        <item>@drawable/l</item>
        <item>@drawable/m</item>
        <item>@drawable/n</item>
        <item>@drawable/o</item>
        <item>@drawable/p</item>
        <item>@drawable/q</item>
        <item>@drawable/r</item>
        <item>@drawable/s</item>
        <item>@drawable/t</item>
        <item>@drawable/u</item>
        <item>@drawable/v</item>
        <item>@drawable/w</item>
        <item>@drawable/x</item>
        <item>@drawable/y</item>
        <item>@drawable/z</item>
    </string-array>

    <string-array name="gambarIsyarat">
        <item>@drawable/a_isyarat</item>
        <item>@drawable/b_isyarat</item>
        <item>@drawable/c_isyarat</item>
        <item>@drawable/d_isyarat</item>
        <item>@drawable/e_isyarat</item>
        <item>@drawable/f_isyarat</item>
        <item>@drawable/g_isyarat</item>
        <item>@drawable/h_isyarat</item>
        <item>@drawable/i_isyarat</item>
        <item>@drawable/j_isyarat</item>
        <item>@drawable/k_isyarat</item>
        <item>@drawable/l_isyarat</item>
        <item>@drawable/m_isyarat</item>
        <item>@drawable/n_isyarat</item>
        <item>@drawable/o_isyarat</item>
        <item>@drawable/p_isyarat</item>
        <item>@drawable/q_isyarat</item>
        <item>@drawable/r_isyarat</item>
        <item>@drawable/s_isyarat</item>
        <item>@drawable/t_isyarat</item>
        <item>@drawable/u_isyarat</item>
        <item>@drawable/v_isyarat</item>
        <item>@drawable/w_isyarat</item>
        <item>@drawable/x_isyarat</item>
        <item>@drawable/y_isyarat</item>
        <item>@drawable/z_isyarat</item>
    </string-array>

</resources>